# wordforge

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  E2E_SUMMARY.md  Makefile  README.md  TEST_PLAN.md  run-all-tests.sh
.claude/: CLAUDE.md
.github/workflows/: coverage.yml  deploy-docs.yml  e2e-tests.yml
crates/visual-fatigue-wasm/: Cargo.toml
docs/: COVERAGE.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/admin/: overview.md
docs/api/: admin.md  auth.md  learning.md  overview.md  words.md
docs/architecture/: amas.md  auth.md  fatigue-detection.md  tech-stack.md  workers.md
docs/guide/: environment.md  getting-started.md  introduction.md  project-structure.md
docs/testing/: coverage.md  e2e-tests.md  overview.md  unit-tests.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  run-e2e-tests.sh  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: README.md  admin.spec.ts  auth.spec.ts  (+9 more)
plan/: frontend-dev-plan.md  wasm-fatigue-detection.md
src/: auth.rs  config.rs  constants.rs  extractors.rs  lib.rs  logging.rs  main.rs  response.rs  state.rs  validation.rs
static/: index.html
tests/: acceptance_full_flow.rs  admin_amas_http.rs  amas_http.rs  auth_http.rs  coverage_routes_http.rs  health_http.rs  perf_workers_compare.rs  property_amas_invariants.rs  property_memory_models.rs  rate_limit_http.rs  realtime_sse_http.rs  records_http.rs  serialization_roundtrip.rs  simulate_frontend.sh  users_http.rs  words_http.rs  workers_coverage.rs
(+300 files in other folders)
