[package]
name = "learning-backend"
version = "0.1.4"
edition = "2021"
rust-version = "1.77"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "fs", "io-util"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "catch-panic", "set-header", "compression-gzip", "compression-br"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"

sled = "=0.34.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

tokio-cron-scheduler = "0.11"

reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "rustls-tls"] }

dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
once_cell = "1"
thiserror = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

[dev-dependencies]
axum-test = "16"
tokio-test = "0.4"
tempfile = "3"
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
